--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <div class="main-container hidden">
             <iframe src="https://lottie.host/embed/7827b80f-90bb-4b9a-abcb-f406eb041958/cTQLh8jS19.lottie" id="crackers"></iframe>
             <iframe src="https://lottie.host/embed/362b655c-bb2d-4e89-a4a4-6daf5c53c811/MRvV4mbevq.lottie" id="lamp"></iframe>
-            <h1>Happy Deepawali <span>2025</span></h1>
+            <h1>Happy <span>Deepawali</span></h1>
             <div id="msg">
-                <!-- <h2></h2> -->
+                <h2>Name</h2>
             </div>
         </div>
 
