added new changes

--- a/index.html
+++ b/index.html
@@ -32,11 +32,22 @@
         </div>
 
         <div class="main-container hidden">
-            <iframe src="https://lottie.host/embed/7827b80f-90bb-4b9a-abcb-f406eb041958/cTQLh8jS19.lottie" id="crackers"></iframe>
-            <iframe src="https://lottie.host/embed/362b655c-bb2d-4e89-a4a4-6daf5c53c811/MRvV4mbevq.lottie" id="lamp"></iframe>
+            <iframe src="https://lottie.host/embed/7827b80f-90bb-4b9a-abcb-f406eb041958/cTQLh8jS19.lottie"
+                id="crackers"></iframe>
+            <iframe src="https://lottie.host/embed/362b655c-bb2d-4e89-a4a4-6daf5c53c811/MRvV4mbevq.lottie"
+                id="lamp"></iframe>
             <h1>Happy <span>Deepawali</span></h1>
             <div id="msg">
                 <h2>Name</h2>
+                <div>
+                    <p>Wishing you a festival full of light, laughter, and love.</p>
+                    <p> May your days shine as bright as the diyas, and your heart be filled with joy and sweet moments.
+                    </p>
+                    <p> Celebrate with those you love, make beautiful memories, and let happiness light up your world.
+                    </p>
+                    <p> Have a safe, sparkling, and truly special Deepavali!
+                    </p>
+                </div>
             </div>
         </div>
 
