added clear funtion to database

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Deepavali 2025</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -39,13 +39,14 @@
             <h1>Happy <span>Deepawali</span></h1>
             <div id="msg">
                 <h2>Name</h2>
-                <div>
-                    <p>Wishing you a festival full of light, laughter, and love.</p>
-                    <p> May your days shine as bright as the diyas, and your heart be filled with joy and sweet moments.
+                <div class="">
+                    <p>May this Festival of Lights brighten your life with joy, prosperity, and endless laughter.
                     </p>
-                    <p> Celebrate with those you love, make beautiful memories, and let happiness light up your world.
+                    <p>Let every diya you light chase away darkness and fill hearts with warmth, wisdom, and hope.
                     </p>
-                    <p> Have a safe, sparkling, and truly special Deepavali!
+                    <p>Celebrate with sweets, sparkle with smiles, and spread love like rangoli on every doorstep.
+                    </p>
+                    <p>Wishing you and your family a Diwali full of blessings, brilliance, and beautiful moments.
                     </p>
                 </div>
             </div>
