added new lines

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
                     <p>Wishing you and your family a Diwali full of blessings, brilliance, and beautiful moments.
                     </p>
                 </div>
+
+            </div>
+            <div class="thank-msg thank-msg1">
+                Thank you for visiting and spending your valuable time here.
+            </div>
+            <div class="thank-msg thank-msg2">
+                Best Regards, <br>
+                Sathwik M S.
             </div>
 
         </div>
