made change and added footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     </p>
                     <p>Celebrate with sweets, sparkle with smiles, and spread love like rangoli on every doorstep.
                     </p>
-                    <p>Wishing you and your family a Diwali full of blessings, brilliance, and beautiful moments.
+                    <p>Wishing you and your family a Deepawali filled with blessings, brightness, and beautiful moments.
+                        May the festival of lights bring happiness, health, and harmony to your home.
                     </p>
                 </div>
 
@@ -57,11 +58,13 @@
             <div class="thank-msg thank-msg2">
                 Best Regards, <br>
                 Sathwik M S.
+                <p id="footer">Designed by <a href="https://www.sathwikms.site/" target="_blank">Sathwik M S</a></p>
             </div>
 
-        </div>
 
+        </div>
     </div>
+
 
     <script src="index.js"></script>
 </body>
